<resources>
    <string name="app_name">Do I Need it ?</string>
    <string name="mobile_device">mobile_device</string>
    <string name="text01">text01</string>
    <string name="skip_steps">Skip steps</string>
    <string name="welcome_to_the_next_line_of_saving_cherishing_every_little_penny_you_have">Welcome to the next line of saving. Cherishing every little penny you have.</string>
    <string name="start">Start</string>
    <string name="Saving">Welcome to the next line of saving. Cherishing every little penny you have.</string>
    <string name="Skip">Skip steps</string>
    <string name="next">Next</string>
    <string name="businesslady">BusinessLady</string>
    <string name="second_on_board">Second On Board</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="thabang">Thabang</string>
    <string name="image">Image</string>
    <string name="items_added">Items Added</string>
    <string name="_10">0</string>
    <string name="items_pending">Items Pending</string>
    <string name="items_purchased">Items Purchased</string>
    <string name="items_deleted">Items Deleted</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="additem">addItem</string>
    <string name="share">Share</string>
    <string name="Api">AIzaSyADI0h-cdgHA698LP8MYNEwezBp8LUWkbc</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapbox_access_token">MAPBOX_ACCESS_TOKEN</string>
    <string name="save_location">Save location</string>
    <string name="you_have_no_products_in_your_list_yet">You Have No products In Your List Yet</string>
    <string name="product_name">Product Name</string>
    <string name="website_link">Website Link</string>
    <string name="product_price">Product Price</string>
    <string name="processing">Processing Data</string>
    <string name="view_products">View Products</string>
    <string name="longitudeupdateone">Longitude</string>
    <string name="latitudeupdateone">Latitude</string>
    <string name="product_addressupdateone">Product Address</string>
    <string name="product_priceupdateone">Product Price</string>
    <string name="website_urlupdateone">Website Url</string>
    <string name="product_descriptionupdateone">Product Description</string>
    <string name="product_nameupdateone">Product Name</string>


</resources>