<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onBoardScreenTwo"
    android:background="@color/black">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="322.5dp"
        android:layout_height="278.8dp"
        android:layout_marginTop="122.5dp"
        android:layout_marginBottom="238.7dp"
        android:layout_marginLeft="18.9dp"
        android:layout_marginRight="18.7dp"
        android:contentDescription="@string/businesslady"
        app:srcCompat="@drawable/businesslady"
        android:layout_marginStart="18.9dp"
        android:layout_marginEnd="18.7dp" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="306dp"
        android:layout_height="290dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="454dp"
        android:layout_marginEnd="87.7dp"
        android:layout_marginRight="87.7dp"
        android:layout_marginBottom="92.3dp"
        app:srcCompat="@drawable/text02"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/nextButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignRight="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="-242dp"
        android:text="@string/next"
        android:textColor="@color/black" />


</RelativeLayout>