<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UpdateProductDetails">

    <EditText
        android:id="@+id/updateproductName"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/fuel_orange"
        android:fontFamily="@font/gontserratbold"
        android:hint="@string/product_nameupdateone" />

    <EditText
        android:id="@+id/updateproductDescription"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/fuel_orange"
        android:fontFamily="@font/gontserratbold"
        android:hint="@string/product_descriptionupdateone"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <EditText
            android:id="@+id/updateproductSite"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fuel_orange"
            android:fontFamily="@font/gontserratbold"
            android:hint="@string/website_urlupdateone"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/productImage"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/updateproductPrice"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/fuel_orange"
            android:fontFamily="@font/gontserratbold"
            android:hint="@string/product_priceupdateone"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/productSite"
            app:layout_constraintEnd_toStartOf="@+id/productImage"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/updateproductImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/four"
            app:civ_border_color="@color/fuel_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/updateproductaddress"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/fuel_orange"
        android:fontFamily="@font/gontserratbold"
        android:hint="@string/product_addressupdateone"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/updatelatitude"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/fuel_orange"
        android:fontFamily="@font/gontserratbold"
        android:hint="@string/latitudeupdateone"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/updatelongitude"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/fuel_orange"
        android:fontFamily="@font/gontserratbold"
        android:hint="@string/longitudeupdateone"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <Button

        android:id="@+id/updateitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:backgroundTint="@color/white"
        android:text="Update"
        android:textColor="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="right"

        >

    </LinearLayout>


</LinearLayout>


