<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:background="@color/black">


    <EditText
        android:id="@+id/productName"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/fuel_orange"
        android:fontFamily="@font/gontserratbold"
        android:hint="@string/product_nameupdateone" />

    <EditText
        android:id="@+id/productDescription"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/fuel_orange"
        android:fontFamily="@font/gontserratbold"
        android:textColorHint="@color/grey"
        android:hint="@string/product_descriptionupdateone"
        android:textColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <EditText
            android:id="@+id/productSite"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fuel_orange"
            android:fontFamily="@font/gontserratbold"
            android:textColorHint="@color/grey"
            android:hint="@string/website_urlupdateone"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/productImage"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/productPrice"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/fuel_orange"
            android:fontFamily="@font/gontserratbold"
            android:textColorHint="@color/grey"
            android:hint="@string/product_priceupdateone"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/productSite"
            app:layout_constraintEnd_toStartOf="@+id/productImage"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/productImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/four"

            app:civ_border_color="@color/fuel_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/mapSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="Select Location"
        android:textColor="#000"
        android:layout_marginTop="25dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Use this location?"
        android:textColor="@color/fuel_orange"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>


    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:id="@+id/mapp"
        android:layout_marginTop="20dp"
        android:layout_height="150dp"
        android:background="@color/white"
        android:visibility="invisible"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="right"

        >



    </LinearLayout>
</LinearLayout>